# Perp-Trade-demo

./: .gitignore  AUDIT_REPORT.md  PRODUCTION_READY.md  README.md  READY_TO_LAUNCH.md  package-lock.json  package.json  vercel.json
backend/: README.md
contracts/: hardhat.config.js  package-lock.json  package.json
contracts/contracts/: FeeManager.sol  FundingRate.sol  Governance.sol  IFeeManager.sol  IFundingRate.sol  IInsuranceFund.sol  IPerpetualManager.sol  IPriceOracle.sol  IVault.sol  InsuranceFund.sol  PerpetualManager.sol  PriceOracle.sol  Template.sol  Vault.sol
contracts/scripts/: deploy-full.js  deploy-proper.js  deploy.js  link-contracts-fixed.js  link-contracts.js
contracts/test/: FeeManager.js  FundingRate.js  Governance.js  InsuranceFund.js  PerpetualManager.js  PriceOracle.js  Template.js  Vault.js
frontend/: .env.development  .env.production  README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  TemplateDapp.js  index.js
frontend/src/components/: ContractValidator.js  ErrorBoundary.js  Loading.js  NetworkStatus.js  PerpsDapp.js  ToastProvider.js  WalletConnect_new.js
frontend/src/config/: constants.js
frontend/src/contracts/: PerpetualManager.json  README.md  Template.json  Vault.json
frontend/src/utils/: helpers.js
solana/solana-perp-exchange/programs/solana-perp-exchange/: Cargo.toml
solana/solana-perp-exchange/programs/solana-perp-exchange/src/: lib.rs  state.rs
solana/solana-perp-exchange/programs/solana-perp-exchange/src/instructions/: mod.rs  trading.rs
